Fixed blurriness in logo at the top of the page

--- a/css/index.css
+++ b/css/index.css
@@ -979,7 +979,7 @@ ul#nav li.current a:after {
 /* =================================================================== */
 
 #hero {
-	background: #0F1215 url(../images/HoGSWebsiteBackground3.png) no-repeat center;
+	background: #0F1215 url(../images/HoGSWebsiteBackground3-Clean.png) no-repeat center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
